--- a/src/resource/scss/app.scss
+++ b/src/resource/scss/app.scss
@@ -288,9 +288,76 @@ form {
         }
     }
 
+    // .page-detail--information {
+    //     display: flex;
+    //     align-items: flex-start;
+    //     .priture {
+    //         display: none;
+    //         margin-left: auto;
+    //         margin-right: 0px;
+    //         position: relative;
+    //         .thumbnail {
+    //             border-radius: 2px;
+    //             box-shadow: 0 0 2px #00000030;
+    //             height: 100px;
+    //             padding: 3px;
+    //             width: 100px;
+    //         }
+    //         .upload-thumbnail {
+    //             bottom: 0px;
+    //             display: inline-block;
+    //             left:0px;
+    //             height: 25px;
+    //             overflow: hidden;
+    //             position: absolute;
+    //             width:25px;
+    //             &:before {
+    //                 background-color: #f28d0f;
+    //                 border-radius: 2px;
+    //                 color: #ffffff;
+    //                 font-family: "FontAwesome";
+    //                 font-weight: 500;
+    //                 font-size: 14px;
+    //                 content: "\f044";
+    //                 display: inline-block;
+    //                 height: 25px;
+    //                 line-height: 25px;
+    //                 text-align: center;
+    //                 width:25px;
+    //                 vertical-align: middle;
+    //             }
+    //         }
+    //         &.active {
+    //             display: block;
+    //         }
+    //     }
+    // }
+    
     .page-detail--information {
         display: flex;
         align-items: flex-start;
+        .title {
+            .title-common-page {
+                font-size: 25px;
+                font-weight: 700;
+                letter-spacing: .3px;
+                margin-bottom: 5px;
+                text-transform: uppercase;
+            }
+            .title-page {
+                font-size: 25px;
+                font-weight: 700;
+                letter-spacing: .3px;
+                margin-bottom: 5px;
+                text-transform: uppercase;
+            }
+            .custom-switch {
+                display: none;
+                &.active {
+                    display: block;
+                }
+            }
+        }
         .priture {
             display: none;
             margin-left: auto;
@@ -332,6 +399,7 @@ form {
             }
         }
     }
+
     .page-detail-form {
         .form-group {
             .form-group--label {
