#Commit 21/06/2022: Refactor Template validation optional - linked element.

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -177,6 +177,11 @@ form .form-group .password-control {
     .page-main .undefine-data.active {
       display: block; }
 
+.detail-form .hidden {
+  display: none; }
+  .detail-form .hidden.active {
+    display: block; }
+
 .page-detail {
   box-shadow: 0 0 2px #00000030;
   margin-top: 15px;
