--- a/src/resource/views/components/client-component/client-detail-component.hbs
+++ b/src/resource/views/components/client-component/client-detail-component.hbs
@@ -77,7 +77,7 @@
             </div>
 
             {{!-- PASSWORD --}}
-            <div class="page-detail">
+            <div class="page-detail hidden">
                 <div class="page-detail--information">
                     <div class="title"><h2 class="title-page">Chỉnh sửa mật khẩu</h2></div>
                 </div>
@@ -100,7 +100,7 @@
             </div>
 
             {{!-- REGISTER COURSE --}}
-            <div class="page-detail mb-3">
+            <div class="page-detail hidden mb-3">
                 <div class="page-detail--information">
                     <div class="title"><h2 class="title-page">Đăng ký học phần</h2></div>
                 </div>
@@ -127,7 +127,7 @@
                     </div>
                 </div>
             </div>
-            <div class="users-detail--serect">
+            <div class="users-detail--serect mb-4">
                 <button type="submit" class="btn-executed btn" id="Executed">Submit</button>
             </div>
         </form>
