#Commit 21/06/2022: Refactor Template - Script page client system.

--- a/src/resource/views/components/client-component/client-detail-component.hbs
+++ b/src/resource/views/components/client-component/client-detail-component.hbs
@@ -100,7 +100,7 @@
             </div>
 
             {{!-- REGISTER COURSE --}}
-            <div class="page-detail hidden mb-3">
+            {{!-- <div class="page-detail hidden mb-3">
                 <div class="page-detail--information">
                     <div class="title"><h2 class="title-page">Đăng ký học phần</h2></div>
                 </div>
@@ -126,7 +126,7 @@
                         <div class="register-blank" id="RegisterBlank">Blank</div>
                     </div>
                 </div>
-            </div>
+            </div> --}}
             <div class="users-detail--serect mb-4">
                 <button type="submit" class="btn-executed btn" id="Executed">Submit</button>
             </div>
