#Commit 21/06/2022: Refactor Script page User.

--- a/src/resource/scss/app.scss
+++ b/src/resource/scss/app.scss
@@ -1,8 +1,12 @@
 @import "_variables.scss";
 
 // HOME PAGE
+html, body {
+    height: 100%;
+}
 .main-body {
-    min-height: 85vh;
+    // min-height: 85vh;
+    height: 100%;
 }
 
 .home_title {
