--- a/src/resource/views/components/client-component/client-detail-component.hbs
+++ b/src/resource/views/components/client-component/client-detail-component.hbs
@@ -99,7 +99,7 @@
                 </div>
             </div>
 
-            {{!-- REGISTER COURSE --}}
+            {{!-- REGISTER COURSE  CHƯA LÀM --}}
             {{!-- <div class="page-detail hidden mb-3">
                 <div class="page-detail--information">
                     <div class="title"><h2 class="title-page">Đăng ký học phần</h2></div>
