--- a/src/resource/views/components/course-component/unit-component/unit-detail-component.hbs
+++ b/src/resource/views/components/course-component/unit-component/unit-detail-component.hbs
@@ -71,7 +71,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="users-detail--serect">
+                <div class="detail--serect">
                     <button type="submit" class="btn-executed btn">Submit</button>
                 </div>
             </form>
