--- a/src/resource/views/components/user-component/user-detail-component.hbs
+++ b/src/resource/views/components/user-component/user-detail-component.hbs
@@ -19,7 +19,6 @@
             </ul>
         </div>
         <form class="detail-form" id="User">
-
             <div class="page-detail my-3">
                 <div class="page-detail--information">
                     <div class="title">
@@ -118,7 +117,7 @@
                     </div>
                 </div>
             </div>
-            <div class="users-detail--serect mb-4">
+            <div class="detail--serect mb-4">
                 <button type="submit" class="btn-executed btn" id="Executed">Submit</button>
             </div>
         </form>
