--- a/src/resource/scss/app.scss
+++ b/src/resource/scss/app.scss
@@ -5,8 +5,8 @@ html, body {
     height: 100%;
 }
 .main-body {
-    // min-height: 85vh;
-    height: 100%;
+    height: auto;
+    min-height: 100%;
 }
 
 .home_title {
@@ -155,23 +155,6 @@ html, body {
     }
 }
 
-// FORM CUSTOMER
-form {
-    .form-group {
-        .password-control{
-            position: relative;
-            i.toggle-pasword {
-                color: #323232;
-                cursor: pointer;
-                right: 5px;
-                position: absolute;
-                top: 50%;
-                transform: translateY(-50%);
-            }
-        }
-    }
-}
-
 // PAGE MAIN
 .page-main {
     box-shadow: 0 0 2px #00000030;
@@ -249,56 +232,57 @@ form {
         }
     }
 }
+
 .page-detail {
     box-shadow: 0 0 2px #00000030;
     margin-top: 15px;
     padding: 15px;
 
-    .title-information {
-        display: flex;
-        align-items: center;
-        .information-title {
-            font-size: 25px;
-            font-weight: 700;
-            margin-bottom: 15px;
-            text-transform: uppercase;
-        }
-        .information-status {
-            display: none;
-            margin-left: auto;
-            &.active {
-                display: block;
-            }
-        }
-        .information-thumbnail {
-            margin-left: auto;
-            position: relative;
-            #thumbnail {
-                bottom: 0px;
-                display: inline-block;
-                right: 0px;
-                height: 35px;
-                overflow: hidden;
-                position: absolute;
-                width:35px;
-                &:before {
-                    background-color: #f28d0f;
-                    border-radius: 2px;
-                    color: #ffffff;
-                    font-family: "FontAwesome";
-                    font-weight: 500;
-                    font-size: 17px;
-                    content: "\f1c5";
-                    display: inline-block;
-                    height: 35px;
-                    line-height: 35px;
-                    text-align: center;
-                    width: 35px;
-                    vertical-align: middle;
-                }
-            }
-        }
-    }
+    // .title-information {
+    //     display: flex;
+    //     align-items: center;
+    //     .information-title {
+    //         font-size: 25px;
+    //         font-weight: 700;
+    //         margin-bottom: 15px;
+    //         text-transform: uppercase;
+    //     }
+    //     .information-status {
+    //         display: none;
+    //         margin-left: auto;
+    //         &.active {
+    //             display: block;
+    //         }
+    //     }
+    //     .information-thumbnail {
+    //         margin-left: auto;
+    //         position: relative;
+    //         #thumbnail {
+    //             bottom: 0px;
+    //             display: inline-block;
+    //             right: 0px;
+    //             height: 35px;
+    //             overflow: hidden;
+    //             position: absolute;
+    //             width:35px;
+    //             &:before {
+    //                 background-color: #f28d0f;
+    //                 border-radius: 2px;
+    //                 color: #ffffff;
+    //                 font-family: "FontAwesome";
+    //                 font-weight: 500;
+    //                 font-size: 17px;
+    //                 content: "\f1c5";
+    //                 display: inline-block;
+    //                 height: 35px;
+    //                 line-height: 35px;
+    //                 text-align: center;
+    //                 width: 35px;
+    //                 vertical-align: middle;
+    //             }
+    //         }
+    //     }
+    // }
     
     .page-detail--information {
         display: flex;
@@ -318,11 +302,11 @@ form {
                 margin-bottom: 5px;
                 text-transform: uppercase;
             }
-            .custom-switch {
-                display: none;
-                &.active {
-                    display: block;
-                }
+        }
+        .custom-switch {
+            display: none;
+            &.active {
+                display: block;
             }
         }
         .priture {
@@ -365,6 +349,55 @@ form {
                 display: block;
             }
         }
+        .priture-description {
+            height: 35px;
+            position: relative;
+            .file {
+                bottom: 0px;
+                display: inline-block;
+                right: 0px;
+                height: 35px;
+                overflow: hidden;
+                position: absolute;
+                width:35px;
+                &:before {
+                    background-color: #f28d0f;
+                    border-radius: 2px;
+                    color: #ffffff;
+                    font-family: "FontAwesome";
+                    font-weight: 500;
+                    font-size: 17px;
+                    content: "\f1c5";
+                    display: inline-block;
+                    height: 35px;
+                    line-height: 35px;
+                    text-align: center;
+                    width: 35px;
+                    vertical-align: middle;
+                }
+            }
+        }
+    }
+    .page-detail--content {
+        border: 1px solid #ccc;
+        margin-top: 5px;
+        padding: 10px;
+        .image-content {
+            display: none;
+            img {
+                height: auto;
+                width: auto;
+            }
+            &.active {
+                display: block;
+            }
+        }
+        .blank-content {
+            display: none;
+            &.active {
+                display: block;
+            }
+        }
     }
 
     .page-detail-form {
@@ -401,63 +434,7 @@ form {
     }
 }
 
-#page-thumbnail {
-    display: none;
-    &.active {
-        display: block;
-    }
-}
-
-.client-course-register {
-    display: none;
-    &.active {
-        display: block;
-    }
-}
-
-// CLIENT BOX REGISTER-COURSE
-.register-course {
-    .course-content {
-        border-radius: 5px;
-        border: 1px solid #dddddd;
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-        flex-wrap: wrap;
-        padding: 10px;
-        .course-content--items {
-            &:not(:first-child) {
-                margin-left: 15px;
-            }
-            .course-content--items_name {
-                display: inline-block;
-            }
-            .course-content--items_unRegister {
-                border: none;
-                background-color: transparent;
-                display: inline-block;
-                line-height: 0px;
-                right: 0px;
-                padding: 0px;
-                i.fa {
-                    color: #5e5e5e;
-                }
-                &:focus, &:focus-visible {
-                    border-top-color: transparent;
-                    border-left-color: transparent;
-                    border-right-color: transparent;
-                    border-bottom-color: transparent;
-                    outline-color: transparent;
-                }
-                &:hover {
-                    color: #da4848;
-                }
-            }
-        }
-    }
-}
-
-.users-detail--serect {
+.detail--serect {
     margin-top: 10px;
     button {
         background-color: #f28d0f!important;
@@ -497,44 +474,6 @@ form {
         }
     }
 }
-
-// TOASTS
-// .modal-toasts {
-//     background-color: #031b3d;
-//     display: none;
-//     align-items: center;
-//     justify-content: center;
-//     min-height: 45px;
-//     top: 108px;
-//     right: 0px;
-//     position: fixed;
-//     padding: 5px 10px;
-//     min-width: 150px;
-//     z-index: 2000;
-//     animation: showToasts 1.1s ease forwards;
-//     transition: all .2s ease;
-//     .content {
-//         color: #ffffff;
-//         font-size: 14px;
-//         margin-bottom: 0px;
-//         text-transform: capitalize;
-//     }
-// }
-
-// .modal-toasts.active {
-//     display: flex;
-// }
-
-// @keyframes showToasts {
-//     0% {
-//         opacity: 0;
-//         transform:  translateX(200px);
-//     }
-//     100% {
-//         opacity: 1;
-//         transform:  translateX(0px);
-//     }
-// }
 
 // FOOTER
 footer {
@@ -591,25 +530,4 @@ footer {
             text-transform: uppercase;
         }
     }
-}
-
-// MODAL LOADER
-.modal-loader {
-    background-color: #ebebeb82;
-    display: none;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    left: 0px;
-    top: 0px;
-    position: fixed;
-    width: 100%;
-    z-index: 100;
-    img {
-        width: 450px;
-    }
-}
-
-.modal-loader.active {
-    display: flex;
 }
