--- a/src/resource/views/components/client-component/client-detail-component.hbs
+++ b/src/resource/views/components/client-component/client-detail-component.hbs
@@ -127,7 +127,7 @@
                     </div>
                 </div>
             </div> --}}
-            <div class="users-detail--serect mb-4">
+            <div class="detail--serect mb-4">
                 <button type="submit" class="btn-executed btn" id="Executed">Submit</button>
             </div>
         </form>
