--- a/src/resource/views/components/course-component/lesson-component/lesson-detail-component.hbs
+++ b/src/resource/views/components/course-component/lesson-component/lesson-detail-component.hbs
@@ -63,7 +63,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="users-detail--serect"><button type="submit" class="btn-executed btn">Submit</button></div>
+                <div class="detail--serect"><button type="submit" class="btn-executed btn">Submit</button></div>
             </form>
         </div>
     </div>
